--- a/kafka-Cassandra/docker-compose.yml
+++ b/kafka-Cassandra/docker-compose.yml
@@ -15,6 +15,10 @@ services:
       interval: 5s
       timeout: 5s
       retries: 60
+    volumes:
+      - vol-zookeeper:/etc/zookeeper/secrets
+      - vol-zookeeper:/var/lib/zookeeper/data
+      - vol-zookeeper:/var/lib/zookeeper/log
     networks:
       - kafka-net
     ports:
@@ -36,10 +40,15 @@ services:
       - kafka-net    
     ports:
       - '9092:9092'
+    volumes:
+      - vol-kafkaserver1:/var/lib/kafka/data
+      - vol-kafkaserver1:/logs
+      - vol-kafkaserver1:/etc/kafka/secrets
     environment:
       - KAFKA_ZOOKEEPER_CONNECT=zookeeper-server:2181
       - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka-server1:9092
       - KAFKA_BROKER_ID=1
+      - KAFKA_LOG_DIRS:/logs
     depends_on:
       - zookeeper-server
 
@@ -54,12 +63,17 @@ services:
       retries: 60
     networks:
       - kafka-net    
+    volumes:
+      - vol-kafkaserver2:/var/lib/kafka/data
+      - vol-kafkaserver2:/logs
+      - vol-kafkaserver2:/etc/kafka/secrets
     ports:
       - '9093:9092'
     environment:
       - KAFKA_ZOOKEEPER_CONNECT=zookeeper-server:2181
       - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka-server2:9092
       - KAFKA_BROKER_ID=2
+      - KAFKA_LOG_DIRS:/logs
     depends_on:
       - zookeeper-server
 
@@ -74,12 +88,17 @@ services:
       retries: 60
     networks:
       - kafka-net    
+    volumes:
+      - vol-kafkaserver3:/var/lib/kafka/data
+      - vol-kafkaserver3:/logs
+      - vol-kafkaserver3:/etc/kafka/secrets
     ports:
       - '9094:9092'
     environment:
       - KAFKA_ZOOKEEPER_CONNECT=zookeeper-server:2181
       - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka-server3:9092
       - KAFKA_BROKER_ID=3
+      - KAFKA_LOG_DIRS:/logs
     depends_on:
       - zookeeper-server
 
@@ -94,6 +113,8 @@ services:
       retries: 60
     networks:
       - kafka-net    
+    volumes:
+      - vol-kafkazr:/etc/schema-registry/secrets
     ports:
       - '8081:8081'
     environment:
@@ -104,7 +125,6 @@ services:
       - zookeeper-server
 
   kafka-connect1:
-
     image: 'confluentinc/cp-kafka-connect:latest'
     container_name: 'kafka-connect1'
     hostname: 'kafka-connect1'
@@ -119,8 +139,12 @@ services:
     ports:
       - '8082:8082'
     volumes:
-      - ./vol-kafka-connect-jar:/etc/kafka-connect/jars
+      - ./vol-kafka-connect-jar:/etc/kafka-connect/
       - ./vol-kafka-connect-conf:/etc/kafka-connect/connectors
+      - vol-kafkaconnect:/etc/kafka-connect/jars
+      - vol-kafkaconnect:/etc/kafka-connect/secrets
+      - vol-kafkaconnect:/etc/kafka/secrets
+      - vol-kafkaconnect:/var/lib/kafka/data
     environment:
       - CONNECT_BOOTSTRAP_SERVERS=kafka-server1:9092,kafka-server2:9092,kafka-server3:9092
       - CONNECT_REST_PORT=8082
@@ -152,6 +176,8 @@ services:
       interval: 5s
       timeout: 5s
       retries: 60
+    volumes:
+      - vol-cassandra:/var/lib/cassandra
     networks:
       - kafka-net 
     ports:
@@ -163,3 +189,15 @@ services:
       - CASSANDRA_RACK=rack1
       - CASSANDRA_ENDPOINT_SNITCH=GossipingPropertyFileSnitch
       - CASSANDRA_NUM_TOKENS=128
+
+
+volumes:
+  vol-kafkaserver1: {}
+  vol-kafkaserver2: {}
+  vol-kafkaserver3: {}
+  vol-zookeeper: {}
+  vol-kafkaconnect: {}
+  vol-kafkazr: {}
+  vol-cassandra: {}
+
+
